--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/springdata
 spring.datasource.username=inpyeong
 spring.datasource.password=pass
 
-# 애플리케이션이 구동 때마다 매번 새로 스키마 생성
+# create: 애플리케이션이 구동 때마다 매번 새로 스키마 생성
+# validate: 매핑이 안되면 애플리케이션 구동 안됨. 운영 시 설정하면 좋다
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
