스프링 데이터 Common 1. 리포지토리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# 질의문의 바인드 변수에 어떤 값이 들어가는지 확인 가능하다.
+logging.level.org.hibernate.type.descriptor.sql=trace
